--- a/style.css
+++ b/style.css
@@ -19,6 +19,13 @@ body {
 	cursor: pointer;
 }
 
+.header img {
+	background-color: black;
+	padding: 10px;
+	height: 10%;
+	width: 10%;
+}
+
 .header a{
 	color: black;
 	text-decoration: none;
